# learning

./: .gitignore  README.md  first_time_setup.sh  log.yml  macos_manpath  run.sh  start-new.sh  todo.md  working-with-args.sh
Config-CLIArgs/: Config-CLIArgs.csproj  Config-CLIArgs.sln
apikeyEncoding/: apikeyEncoding.sln  build.cake
assert-everything/: pom.xml
asserts-in-prod/: readme.md
axum/static_assets/: Cargo.toml  test.http
axum/static_assets/src/: main.rs
basic_example/: pubspec.yaml
catching_pipes/: main.sh  run.sh
classes/: Widget.php  start.php
cli/: start.php
cli_autocomplete/: Makefile  go.mod  go.sum  main.go
code-generation/: README.md  pom.xml  run.sh
custom_ilogger/: Logger.cs  LoggerConfig.cs  LoggerExtension.cs  LoggerProvider.cs  Program.cs  custom_ilogger.csproj  custom_ilogger.sln
custom_tools/: Makefile  README.md  db_init_run.sh  go.mod
data_integration_clis/: README.md
datastore_interface/: build.cake  datastore_interface.sln
dbExec/: build.cake  dbExec.sln
decompile/: .gitignore  Demo.java  run.sh
dirServices/: dirServices.csproj
dirServicesProtocol/: dirServicesProtocol.csproj
dotnet9_result_and_option/: dotnet9_result_and_option.sln
dotnet_interactive_notebooks/: README.md
embedResource/: embedResource.sln
extension_libs/: go.mod  go.sum  main.go
fib_sequence_api/: results.txt  run.sh
first_cli_app/: Makefile  README.md  go.mod
games/: README.md
rust/tide/static_assets/: Cargo.toml  Dockerfile  nginx.conf
rust/tide/static_assets/www/: index.html
rust/tide/static_assets/www/js/: site.js
(+1757 files in other folders)
